BTN-2280 move sbds api into its own module
